<resources>
    <string name="app_name">Mazecape</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="play_button">Play</string>
    <string name="help_button">Help</string>
    <string name="shop_button">Shop</string>
    <string name="level_editor_button">Level Editor</string>
    <string name="shop">Shop</string>
    <string name="level">Level</string>
    <string name="level_editor">Level Editor</string>
    <string name="settings">Settings</string>
    <string name="music_volume">Music Volume</string>
    <string name="sound_volume">Sound Volume</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_thanks">No, thanks</string>
    <string name="ads_remove">All ads will be removed with your first purchase!</string>
    <string name="forest">Forest</string>
    <string name="cave">Cave</string>
    <string name="snow">Snow</string>
    <string name="desert">Desert</string>
    <string name="star">Star</string>
    <string name="fire">Fire</string>
    <string name="portal">Portal</string>
    <string name="moster">Monster</string>
    <string name="sword">Sword</string>
    <string name="trap_active">Trap (active)</string>
    <string name="trap_inactive">Trap (inactive)</string>
    <string name="crack">Crack</string>
    <string name="hole">Hole</string>
    <string name="level_types">Worlds</string>
    <string name="forest_info">Try to finish the level before it gets dark. The longer you take the darker it gets</string>
    <string name="cave_info">Try to finish the level with less steps. The deeper you go the darker it gets</string>
    <string name="snow_info">The ground is slippery. You can\'t change direction until the path ends</string>
    <string name="desert_info">Every few steps you\'ll lose your orientation. The map will rotate randomly</string>
    <string name="special_tiles">Special Tiles</string>
    <string name="star_info">Stars will help you on your way. You\'ll find 3 of them in each level</string>
    <string name="fire_info">Finding a fireplace will help you survive longer as it resets the darkness completely</string>
    <string name="portal_info">A portal takes you to unreachable places</string>
    <string name="monster_info">When you face a monster make sure you have found a sword first in order to survive</string>
    <string name="sword_info">A sword will help you fighting monsters along the path</string>
    <string name="trap_active_info">While the trap is active you will die when trying to cross it</string>
    <string name="trap_inactive_info">The trap is temporarily inactive. You can safely pass it but be quick</string>
    <string name="crack_info">The ground is fragile. It will only last for one more step before breaking</string>
    <string name="hole_info">The ground has collapsed. When you try to cross it you will die</string>
    <string name="die_torch">If I just had a torch&#8230;</string>
    <string name="stars">Stars</string>
    <string name="use_torch">Use torch</string>
    <string name="buy_torch">Buy torch</string>
    <string name="you_died">You died</string>
    <string name="you_died_after">You died after</string>
    <string name="die_steps">steps</string>
    <string name="retry">Retry</string>
    <string name="level_select">Level Select</string>
    <string name="world_select">World Select</string>
    <string name="you_win">You win</string>
    <string name="steps">Steps</string>
    <string name="time">Time</string>
    <string name="next_level">Next</string>
    <string name="next_world">Next</string>
    <string name="replay">Replay</string>
    <string name="reset_level">Do you really want to reset level?</string>
    <string name="reveal_map">Do you like to reveal the map? 20 Stars</string>
    <string name="level_select_screen">Do you really want to go back to the level select screen? You will lose all your progress in the current level</string>
    <string name="purchase_successful">Purchase successful</string>
    <string name="not_enough_stars">Not enough stars</string>
    <string name="full_health">You already are at full health</string>
    <string name="purchase_error">There was an error, please try again</string>
    <string name="lives">Lives</string>
    <string name="discovered">Discovered</string>
    <string name="goal">Goal</string>
    <string name="new_world">You\'ve unlocked a new World!</string>
    <string name="enter_columns">Select Columns (1..20)</string>
    <string name="enter_rows">Select Rows (1..20)</string>
    <string name="next">Next</string>
    <string name="enter_number">Please enter a number between 1 and 20</string>
    <string name="enter_scene">Select Scene (\'f\', \'c\', \'s\' or \'d\')</string>
    <string name="enter_scene_char">Please enter \'f\', \'c\', \'s\' or \'d\'</string>
    <string name="unlock_level">You can unlock this level by finishing all previous levels</string>
    <string name="upgrade">Upgrade</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="max">Max</string>
    <string name="buy_world_50">Would you like to buy this World? 50 Stars</string>
    <string name="buy_world_100">Would you like to buy this World? 100 Stars</string>
    <string name="buy_world_150">Would you like to buy this World? 150 Stars</string>
    <string name="back_to_main_menu">Do you really want to go back to main menu?</string>
    <string name="buy_world_200">Would you like to buy this World? 200 Stars</string>
    <string name="controls">Controls</string>
    <string name="normal">Normal</string>
    <string name="inverse">Inverse</string>
    <string name="touch">Touch</string>
    <string name="swipe">Swipe</string>
    <string name="chapter">Chapter</string>
    <string name="chapter_1">Chapter 1</string>
    <string name="chapter_2">Chapter 2</string>
    <string name="chapter_3">Chapter 3</string>
    <string name="chapter_4">Chapter 4</string>
    <string name="page">Page</string>
    <string name="page_1">Page 1</string>
    <string name="page_2">Page 2</string>
    <string name="page_3">Page 3</string>
    <string name="page_4">Page 4</string>
    <string name="page_5">Page 5</string>
    <string name="page_6">Page 6</string>
    <string name="page_7">Page 7</string>
    <string name="page_8">Page 8</string>
    <string name="page_9">Page 9</string>
    <string name="page_10">Page 10</string>
    <string name="chapter_1_page_1">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_1_page_2">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_1_page_3">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_1_page_4">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_1_page_5">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_1_page_6">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_1_page_7">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_1_page_8">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_1_page_9">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_1_page_10">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_2_page_1">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_2_page_2">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_2_page_3">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_2_page_4">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_2_page_5">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_2_page_6">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_2_page_7">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_2_page_8">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_2_page_9">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_2_page_10">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_3_page_1">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_3_page_2">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_3_page_3">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_3_page_4">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_3_page_5">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_3_page_6">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_3_page_7">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_3_page_8">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
    <string name="chapter_3_page_9">You wake up disoriented. You find yourself inside a maze. All you remember is - darkness. You\'re looking to sky but the sun seems to be gone.</string>
</resources>