<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_story"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.ollum.mazecape.Fragments.StoryFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/chapter_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/chapter_1"
                android:textColor="@color/colorTextDark"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chapter_1_page_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_1_page_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_1_page_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_1_page_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_1_page_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_1_page_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_1_page_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_1_page_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_1_page_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_1_page_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_2"
                android:textColor="@color/colorTextDark"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chapter_2_page_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_2_page_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_2_page_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_2_page_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_2_page_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_2_page_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_2_page_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_2_page_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_2_page_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_2_page_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_3"
                android:textColor="@color/colorTextDark"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chapter_3_page_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_3_page_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_3_page_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_3_page_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_3_page_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_3_page_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_3_page_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_3_page_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_3_page_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_3_page_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_4"
                android:textColor="@color/colorTextDark"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/chapter_4_page_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_4_page_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_4_page_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_4_page_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_4_page_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_4_page_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_4_page_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_4_page_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_4_page_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/chapter_4_page_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/chapter_1_page_1"
                android:textColor="@color/colorTextDark"
                android:textSize="20dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
